--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "~7.0 || ~7.1 || ~7.2 || ~7.3"
+        "php": ">=7.0.0 <8.0.0"
     },
     "autoload": {
         "psr-4": {
